# bglib

./: CMakeLists.txt  README.md  libbglib.pc.in
examples/scan_example/: main.c  main.cpp
include/bglib/: apitypes.h  cmd_def.h  uart.h
src/: cmd_def.c  cmd_def.cpp  commands.c  uart.c  uart.cpp
